--- a/Explorer/Explorer.ipynb
+++ b/Explorer/Explorer.ipynb
@@ -3113,6 +3113,24 @@
      "text": [
       "{'commandHash': '72c1e897804dd57da5919e08dba3bf7fa7c07574f209bed56f7300fbcc4f7fdf'}\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 19:19:49] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 19:19:49] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [03/May/2021 19:20:23] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 19:20:23] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [03/May/2021 19:20:38] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '29910167592ad6d15521f797af82bf57e42d9b9c50159f22926ec46ad37e4608'}\n"
+     ]
     }
    ],
    "source": [
