Добавлена передача сведений о файлах

--- a/Notepad/Notepad.ipynb
+++ b/Notepad/Notepad.ipynb
@@ -98,6 +98,22 @@
      "text": [
       "{'commandHash': 'c4779be75e4efb8ef3524a2d2d52de34d6dac721a3893aefdb66486f775fa699'}\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 21:47:16] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 21:47:17] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 21:47:27] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'ed78b0d7621d5db5b12750b7ade33b78a9c205f680d82bac7585eb20aa9ef17f'}\n"
+     ]
     }
    ],
    "source": [
