--- a/Server SRP/Server SRP.ipynb
+++ b/Server SRP/Server SRP.ipynb
@@ -575,6 +575,118 @@
       "b'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q='\n",
       "['list', 'delete', 'mkdir', 'rename']\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 19:20:41] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608ff071856012aac7511084', 'type': 'list', 'commandHash': '29910167592ad6d15521f797af82bf57e42d9b9c50159f22926ec46ad37e4608', 'serverSign': 'BHTStQJba7f1ML+aIuVOn1gFXAq2RKiZ0AHMrD571xQ=', 'appURL': 'http://localhost:49055/'}\n",
+      "b'BHTStQJba7f1ML+aIuVOn1gFXAq2RKiZ0AHMrD571xQ='\n",
+      "['list', 'delete', 'mkdir', 'rename']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 21:47:01] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608ff071856012aac7511084', 'type': 'list', 'commandHash': '72c1e897804dd57da5919e08dba3bf7fa7c07574f209bed56f7300fbcc4f7fdf', 'serverSign': 'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q=', 'appURL': 'http://localhost:49055/'}\n",
+      "b'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q='\n",
+      "['list', 'delete', 'mkdir', 'rename']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 21:47:29] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'write', 'commandHash': 'ed78b0d7621d5db5b12750b7ade33b78a9c205f680d82bac7585eb20aa9ef17f', 'serverSign': 'g22s1YVHgDJMAonP7BimyvfX6L1X0g78Cbu06R6xJY4=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'g22s1YVHgDJMAonP7BimyvfX6L1X0g78Cbu06R6xJY4='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 21:47:32] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608ff071856012aac7511084', 'type': 'list', 'commandHash': '72c1e897804dd57da5919e08dba3bf7fa7c07574f209bed56f7300fbcc4f7fdf', 'serverSign': 'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q=', 'appURL': 'http://localhost:49055/'}\n",
+      "b'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q='\n",
+      "['list', 'delete', 'mkdir', 'rename']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 21:51:42] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608ff071856012aac7511084', 'type': 'list', 'commandHash': '72c1e897804dd57da5919e08dba3bf7fa7c07574f209bed56f7300fbcc4f7fdf', 'serverSign': 'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q=', 'appURL': 'http://localhost:49055/'}\n",
+      "b'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q='\n",
+      "['list', 'delete', 'mkdir', 'rename']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 21:51:58] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608ff071856012aac7511084', 'type': 'delete', 'commandHash': '3ffe98921f0a4d0d3d019697555c96177388f7dabce2baed6725a0c8555447fb', 'serverSign': 'p3ZYBNhHgv2wFVRUt6ucxtdaqEwk2ktg4iQqQhf8P5U=', 'appURL': 'http://localhost:49055/'}\n",
+      "b'p3ZYBNhHgv2wFVRUt6ucxtdaqEwk2ktg4iQqQhf8P5U='\n",
+      "['list', 'delete', 'mkdir', 'rename']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 21:52:00] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608ff071856012aac7511084', 'type': 'list', 'commandHash': '72c1e897804dd57da5919e08dba3bf7fa7c07574f209bed56f7300fbcc4f7fdf', 'serverSign': 'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q=', 'appURL': 'http://localhost:49055/'}\n",
+      "b'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q='\n",
+      "['list', 'delete', 'mkdir', 'rename']\n"
+     ]
     }
    ],
    "source": [
